cmake_minimum_required(VERSION 3.17.0 FATAL_ERROR)

project ("Test" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../${CMAKE_BUILD_TYPE}/Bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../${CMAKE_BUILD_TYPE}/Lib)
if(MSVC)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../${CMAKE_BUILD_TYPE}/Bib)
  set(SHORT_RPATH "./")
else()
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../${CMAKE_BUILD_TYPE}/Lib)
  set(SHORT_RPATH "./../Lib")
endif()

add_subdirectory(C++)
